# pense-rpkg

./: .Rbuildignore  .gitignore  .travis.yml  404.html  ChangeLog  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE-text.md  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  authors.html  authors.md  build  bundle  cleanup  configure  configure.ac  configure.win  cran-comments.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
.github/: check-package-extended.yml
.github/workflows/: check-package-armadev.yml  check-package-extended.yml  check-package-fast.yml  html5-checks.yml  pkgdown.yml  render-README.yaml  rhub.yaml
R/: additional-options.R  autoconfig.R.in  autoconfig.win.R.in  build_lambda_grid.R  change_cv_measure.R  coef-methods.R  coef.pense.R  constants.R  control.R  control_options.R  cv_utilities.R  deprecated-functions.R  elnet.R  enpy.R  enpy.exact.R  enpy.rr.R  initest.control.R  lambda.grid.R  mscale.R  mstep.R  pen.s.reg.R  pen_s_reg.R  pense.R  pense.coldwarm.R  pense_coldwarm.R  pense_pkg.R  pense_regression.R  pense_regression_args.R  pensem.R  pensem_regression.R  pensemstep.R  plot-methods.R  predict-methods.R  predict.pense.R  prinsens.R  print-methods.R  pyinit.R  regmest_regression.R  residuals-methods.R  setupCluster.R  (+2 more)
articles/: computing_adapense.html  computing_adapense.md  index.html  index.md  lambda_grids.html  lambda_grids.md  migration_guide.html
examples/: adapense_fit.R  elnet-1.R  elnet-plot.R  elnet_cv-1.R  elnet_cv-methods.R  elnet_cv-plot.R  enpy.R  ls_elnet.R  mscale.R  pense-1.R  pense-methods.R  pense-plot.R  pense_fit.R  pensem-1.R  prinsens.R  regmest_fit.R  residuals.R
inst/: COPYRIGHT  COPYRIGHTS
inst/examples/: pense-1.R
man/: cd_algorithm_options.Rd  change_cv_measure.Rd  coef.elnetfit.Rd  coef.pense.Rd  coef.pense_cvfit.Rd  coef.pense_fit.Rd  coef.pensem.Rd  consistency_const.Rd  deprecated_en_options.Rd  dot-approx_match.Rd  dot-bisquare_consistency_const.Rd  dot-bisquare_efficiency_const.Rd  dot-find_stable_bdb_bisquare.Rd  dot-huber_efficiency_const.Rd  dot-mopt_consistency_const.Rd  dot-mopt_efficiency_const.Rd  dot-run_replicated_cv.Rd  dot-run_replicated_cv_ris.Rd  dot-standardize_data.Rd  elnet.Rd  elnet_cv.Rd  en_admm_options.Rd  en_algorithm_options.Rd  en_cd_options.Rd  en_dal_options.Rd  en_lars_options.Rd  en_options.Rd  en_ridge_options.Rd  enpy.Rd  enpy.control.Rd  enpy.exact.Rd  enpy.rr.Rd  enpy_exact.Rd  enpy_initial_estimates.Rd  enpy_ols.Rd  enpy_options.Rd  enpy_rr.Rd  initest.control.Rd  initest_options.Rd  mloc.Rd  (+39 more)
man-roxygen/: cv_params.R  hyper_param-cv.R  hyper_param-fit.R
news/: index.html  index.md
reference/: cd_algorithm_options.html  cd_algorithm_options.md  change_cv_measure.html  change_cv_measure.md  coef.pense_cvfit.html  coef.pense_cvfit.md  coef.pense_fit.html  coef.pense_fit.md  consistency_const.html  deprecated_en_options.html  dot-approx_match.html  dot-approx_match.md  dot-bisquare_consistency_const.html  dot-bisquare_consistency_const.md  dot-bisquare_efficiency_const.html  dot-bisquare_efficiency_const.md  dot-find_stable_bdb_bisquare.html  dot-find_stable_bdb_bisquare.md  dot-huber_efficiency_const.html  dot-huber_efficiency_const.md  dot-mopt_consistency_const.html  dot-mopt_consistency_const.md  dot-mopt_efficiency_const.html  dot-mopt_efficiency_const.md  dot-run_replicated_cv.html  dot-run_replicated_cv.md  dot-run_replicated_cv_ris.html  dot-run_replicated_cv_ris.md  dot-standardize_data.html  dot-standardize_data.md  elnet.html  elnet.md  elnet_cv.html  elnet_cv.md  en_admm_options.html  en_admm_options.md  en_algorithm_options.html  en_algorithm_options.md  en_cd_options.html  en_cd_options.md  (+66 more)
src/: AuxMemory.c  AuxMemory.h  BLAS.h  Control.h  Data.hpp  ENDal.cpp  ENDal.hpp  ENLars.cpp  ENLars.hpp  ElasticNet.cpp  ElasticNet.hpp  IRWEN.cpp  IRWEN.hpp  IndexNumber.hpp  InitialEstimator.cpp  InitialEstimator.hpp  LapackException.hpp  MStep.cpp  MStep.hpp  Makevars.dbg  Makevars.in  Makevars.rel  Makevars.win  Options.hpp  PENSEreg.cpp  PENSEreg.hpp  PSC.hpp  PSCImpl.cpp  PSCxx.cpp  PSCxx.hpp  PartialSort.c  PartialSort.h  Rinterface.cpp  Rinterface.hpp  _test_regularization_path.cpp  autoconfig.h  autoconfig.h.in  autoconfig.hpp  autoconfig.hpp.in  autoconfig.hpp.win  (+43 more)
src/nsoptim/: armadillo.hpp  armadillo_forward.hpp  optimizer.hpp  rcpp_integration.hpp
src/nsoptim/container/: data.hpp  forward.hpp  metrics.hpp  regression_coefficients.hpp
src/nsoptim/objective/: adaptive_en_penalty.hpp  en_penalty.hpp  forward.hpp  ls_regression_loss.hpp
src/nsoptim/optimizer/: admm.hpp  auglars.hpp  coordinate_descent.hpp  dal.hpp  dal_helper.hpp  linear_algebra_utilities.hpp  mm.hpp  optimizer_base.hpp  optimum.hpp  soft_threshold.hpp
src/nsoptim/traits/: can_evaluate.hpp  can_optimize.hpp  has_convex_surrogate.hpp  has_difference_op.hpp  is_adaptive.hpp  is_differentiable.hpp  is_en_penalty.hpp  is_iterative_algorithm.hpp  is_loss_function.hpp  is_ls_regression_loss.hpp  is_penalty_function.hpp  is_weighted.hpp  sfinae_types.hpp
tests/: testthat.R
tests/testthat/: auxFunct_PENSE.R  elnet_algorithms.R  enpy.old.R  helper.R  test-cpp.R  test.elnet.R  test.elnet.auglars.R  test.elnet.dal.R  test.elnet.objective.R  test.enpy.rr.R  test.mscale.R  test.mstep.R  test.pen.s.reg.R  test.pscs.R  test.weighted.elnet.R  test_discrete_response.R  test_elnet_algorithms.R  test_elnet_comp_dal_auglars_en.R  test_mest_algorithm.R  test_multiple_alpha.R  test_parallel_clusters.R  test_pense_algorithm.R  test_predict.R  test_rho.R  test_ris_cv.R  test_weight_matching.R
tests/testthat/snap/: pense_algo_mt.json  pense_algo_st-mopt.json  pense_algo_st.json  regmest_algo_mt.json  regmest_algo_st-mopt.json  regmest_algo_st.json
vignettes/: .install_extras  computing_adapense.R  computing_adapense.Rmd  computing_adapense.html  computing_adapense_fits.RData  lambda_grids.R  lambda_grids.Rmd  lambda_grids.html  lambda_grids_fits.RData  migration_guide.R  migration_guide.Rmd  migration_guide.html
